syntax = "proto3";

package proto;

option csharp_namespace = "StudentsService.Protos"; // This is for .NET namespace mapping

message Student {
  int32 student_id = 1;
  int32 age = 2;
  int32 grade = 3;
  string event_id = 4;
  string token = 5;
}

message AssessmentResponse {
  bool approved = 1;
}

service AssessStudentService {
  rpc AssessStudent(Student) returns (AssessmentResponse);
}
